add_executable(geometry_objects geometry_objects.cpp)
target_link_libraries(geometry_objects barrier_resilience)

add_executable(objects_to_graph objects_to_graph.cpp)
target_link_libraries(objects_to_graph barrier_resilience)

add_executable(barrier_resilience_example barrier_resilience_example.cpp)
target_link_libraries(barrier_resilience_example barrier_resilience)

add_executable(barrier_resilience_minimal_example barrier_resilience_minimal_example.cpp)
target_link_libraries(barrier_resilience_minimal_example barrier_resilience)

add_executable(execute_with_input execute_with_input.cpp)
target_link_libraries(execute_with_input barrier_resilience)